# chorded-key-remapper

./: .gitignore  Cargo.toml  README.md  config-future-additions.toml  config.toml  desired-features.txt
project_derive/: Cargo.toml
project_derive/src/: lib.rs
src/: config.rs  device.rs  device_library_interface.rs  errors.rs  key.rs  main.rs  mapping.rs  schema.rs
src/auxiliary/: device_filtering.rs  mod.rs  utils.rs
src/config/: deserialize.rs  mod.rs  parsing.rs  schema.rs
src/device/: device.rs  key.rs  mod.rs
