[package]
name = "chorded-key-remapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev = "0.12.0"
log = "0.4.17"
mockall = "0.11.2"
serde = "1.0.152"
serde_derive = "1.0.152"
thiserror = "1.0.37"
toml = "0.7.2"
